# ohte

./: .gitignore  LICENSE  README.md
harjoitustyo/: pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: config.py  index.py  initialize_database.py  pyproject.toml
harjoitustyo/src/entities/: apple.py  player.py  snake.py
harjoitustyo/src/enums/: game_enums.py
harjoitustyo/src/repositories/: game_repository.py  player_repository.py
harjoitustyo/src/services/: snake_game.py  ui_logic.py
harjoitustyo/src/tests/: initialize_database_test.py
harjoitustyo/src/tests/entities/: apple_test.py  snake_test.py
harjoitustyo/src/tests/repositories/: game_repository_test.py  player_repository_test.py
harjoitustyo/src/tests/services/: ui_logic_test.py
harjoitustyo/src/ui/: game_end_view.py  instructions_view.py  leaderboard_view.py  login_view.py  main_view.py  settings_view.py  ui.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoly.md
