[tool.poetry]
name = "Snake"
version = "0.1.0"
description = "Simple snake game"
authors = ["DeeCaaD <perttu.kangas@hotmail.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
